# uza

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  build-requirements.txt  lang.py  main.py  pyproject.toml  requirements.txt  setup.py  uza
.github/workflows/: ci.yml  distribute.yml  python-app.yml
examples/: README.md  aoc_2024_1.uza  aoc_2024_2.uza  fibonacci_bench.uza  fibonacci_variants.uza  fibonnacci.uza  fizzbuzz.uza  game_of_life.uza  sorting_algorithms.uza
include/: bytecodes.h  chunk.h  common.h  debug.h  memory.h  native.h  object.h  serialize.h  serializer.h  table.h  value.h  vm.h
src/: main.py
src/mylang/: __init__.py  bytecode.py  lang.py  typer.py
src/uza/: ast.py  bytecode.py  interpreter.py  main.py  parser.py  token.py  typer.py  utils.py
src/uza/typing/: type.py  typer.py
src/vm/: CMakeLists.txt  Makefile  bytecodes.h  chunk.c  chunk.h  common.h  debug.c  main.c  main.py  memory.c  object.c  object.h  serializer.c  serializer.h  value.c  value.h  vm  vm.c
test/: Makefile  helper.py  test_end_to_end.py  test_end_to_end_vm.py  test_parser.py  test_sources.txt  test_typing.py
tests/: Makefile  lang_test.py  lang_tests.py  test_vm  test_vm.c
uza/: __main__.py  ast.py  builtins.py  bytecode.py  cli.py  interpreter.py  parser.py  token.py  type.py  typer.py  utils.py  uzast.py
uzac/: ast.py  builtins.py  bytecode.py  cli.py  driver.py  interpreter.py  parser.py  token.py  type.py  typer.py  utils.py
vm/: CMakeLists.txt  chunk.c  debug.c  main.c  main.py  memory.c  native.c  object.c  serialize.c  serializer.c  table.c  value.c  vm.c
